--- a/Intro/src/main/resources/application.properties
+++ b/Intro/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port = 8092
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/University
+spring.datasource.username=postgres
+spring.datasource.password=1214
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.hibernate.ddl-auto=update
