--- a/Intro/src/main/resources/application.properties
+++ b/Intro/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# App Properties
+codeAcademy.app.jwtSecret=iuerwvtgj43t
+codeAcademy.app.jwtExpirationMs=86400000
